fix css overlap logo and nav

--- a/style.css
+++ b/style.css
@@ -9,7 +9,6 @@ article{
 	display: flex;
 	justify-content: center;
     align-items: center;
-	height:40%;
 }
 footer{
 	text-align:center; 
